--- a/package.json
+++ b/package.json
@@ -1,5 +1,16 @@
-"dependencies": {
-  "express": "^4.18.2",
-  "node-fetch": "^3.0.0",
-  "cheerio": "^1.0.0"
+{
+  "name": "etf-service",
+  "version": "1.0.0",
+  "description": "Servizio per scraping ETF da Lang & Schwarz",
+  "type": "module",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "test": "node test.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "node-fetch": "^3.0.0",
+    "cheerio": "^1.0.0"
+  }
 }
