--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "test": "node test.js"
   },
   "dependencies": {
+    "cheerio": "^1.0.0",
     "express": "^4.18.2",
-    "node-fetch": "^3.0.0",
-    "cheerio": "^1.0.0"
+    "luxon": "^3.7.2",
+    "node-fetch": "^3.0.0"
   }
 }
