--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "node test.js"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "cheerio": "^1.0.0",
     "express": "^4.18.2",
     "luxon": "^3.7.2",
