--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "description": "Servizio per scraping ETF da Lang & Schwarz",
   "type": "module",
-  "main": "server.js",
+  "main": "core/server.js",
   "scripts": {
-    "start": "node server.js",
-    "test": "node test.js"
+    "start": "node core/server.js",
+    "test": "node tests/test.js"
   },
   "dependencies": {
     "axios": "^1.13.2",
