--- a/.env
+++ b/.env
@@ -1,1 +1,9 @@
+# Connessione al database Postgres
 PG_URI=postgresql://etfuser:etfpass@localhost:5432/etfdb
+
+# Porta locale (puoi cambiarla se serve)
+PORT=3000
+
+# URL base per le chiamate interne
+# In locale punta a localhost, su Render imposta questo valore nelle Environment Variables
+BASE_URL=http://localhost:3000
