--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "node tests/test.js"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.87.1",
     "axios": "^1.13.2",
     "cheerio": "^1.0.0",
     "date-holidays": "^3.26.5",
