--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@supabase/supabase-js": "^2.87.1",
     "axios": "^1.13.2",
     "cheerio": "^1.0.0",
+    "date-fns": "^4.1.0",
     "date-holidays": "^3.26.5",
     "express": "^4.18.2",
     "luxon": "^3.7.2",
