--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cheerio": "^1.0.0",
     "date-fns": "^4.1.0",
     "date-holidays": "^3.26.5",
+    "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "luxon": "^3.7.2",
     "node-fetch": "^3.0.0"
