--- a/fly.toml
+++ b/fly.toml
@@ -8,6 +8,9 @@ primary_region = 'fra'
 
 [build]
 
+[processes]
+  app = "node core/server.js"
+
 [http_service]
   internal_port = 3000
   force_https = true
@@ -23,7 +26,10 @@ primary_region = 'fra'
   memory_mb = 1024
 
 [[jobs]]
+  processes = ["app"]
   name = "save-previous-close"
   schedule = "0 23 * * 1-5"
   command = ["node", "scripts/savePreviousClose.js"]
+
+
 
