--- a/fly.toml
+++ b/fly.toml
@@ -1,7 +1,5 @@
+
 # fly.toml app configuration file generated for etf-service on 2025-12-20T17:56:53Z
-#
-# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
-#
 
 app = 'etf-service'
 primary_region = 'fra'
@@ -25,11 +23,15 @@ primary_region = 'fra'
   cpus = 1
   memory_mb = 1024
 
+# JOB 21-UTC — lo script decide se è l'ora giusta (23:00 italiane)
 [[jobs]]
   processes = ["app"]
-  name = "save-previous-close"
-  schedule = "0 23 * * 1-5"
+  name = "save-previous-close-21utc"
+  schedule = "0 21 * * 1-5"
   command = ["node", "scripts/savePreviousClose.js"]
 
-
-
+[[jobs]]
+  processes = ["app"]
+  name = "save-previous-close-22utc"
+  schedule = "0 22 * * 1-5"
+  command = ["node", "scripts/savePreviousClose.js"]
